--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     .card { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); width:min(900px,92vw); padding:20px; background:rgba(0,0,0,0.65); border-radius:16px; }
     h1 { margin:0; text-align:center; font-size:2em; }
     .header { display:flex; justify-content:space-between; align-items:center; margin-bottom:16px; }
-    .user { display:flex; align-items:center; gap:6px; font-size:0.9em; }
-    .user-icon { width:24px; height:24px; border-radius:50%; background:#ff5ca8; display:flex; align-items:center; justify-content:center; font-size:14px; }
+    .profile-btn { display:flex; align-items:center; gap:8px; cursor:pointer; }
+    .profile-btn img { width:32px; height:32px; border-radius:50%; }
     .bar { display:flex; gap:10px; margin-bottom:12px; }
     .bar input { flex:1; padding:12px; border-radius:8px; border:1px solid #444; background:#1b1b1b; color:#fff; }
     .bar button { padding:12px; border-radius:8px; border:none; background:#ff5ca8; color:#fff; cursor:pointer; }
@@ -26,8 +26,8 @@
     .item a:hover { text-decoration:underline; }
     .photo-grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(150px,1fr)); gap:10px; }
     .photo-grid img { width:100%; height:120px; object-fit:cover; border-radius:8px; background:#222; }
-    .row { display:flex; gap:8px; flex-wrap:wrap; }
-    .row .pill { background:#222; padding:8px 12px; border-radius:999px; }
+    .history-list { margin-top:10px; }
+    .history-list span { display:inline-block; background:#222; padding:6px 10px; border-radius:999px; margin:4px; }
   </style>
 </head>
 <body>
@@ -38,14 +38,10 @@
       <div id="home">
         <div class="header">
           <h1>Searchmas 🎅🎄</h1>
-          <div class="user">
-            <div class="user-icon">👤</div>
-            <span id="usernameDisplay"></span>
+          <div class="profile-btn" id="profileBtn">
+            <img src="https://i.imgur.com/1X1Z1Z1.png" alt="Profile">
+            <span>History</span>
           </div>
-        </div>
-        <div class="bar">
-          <input id="username" type="text" placeholder="Set username">
-          <button id="setUser">Save</button>
         </div>
         <div class="bar">
           <input id="q" type="text" placeholder="Search…">
@@ -68,34 +64,53 @@
         </div>
         <div id="content"></div>
       </div>
+      <div id="historyView" style="display:none;">
+        <h2>Your Search History</h2>
+        <div class="history-list" id="historyList"></div>
+        <button id="closeHistory">Close</button>
+      </div>
     </div>
   </div>
   <script>
     const home=document.getElementById('home');
     const results=document.getElementById('results');
+    const historyView=document.getElementById('historyView');
     const q=document.getElementById('q');
     const qTop=document.getElementById('qTop');
     const content=document.getElementById('content');
-    const usernameInput=document.getElementById('username');
-    const usernameDisplay=document.getElementById('usernameDisplay');
-    let currentUser=localStorage.getItem('searchmasUsername')||'';
-    function updateUserDisplay(){usernameDisplay.textContent=currentUser;}
-    updateUserDisplay();
-    document.getElementById('setUser').onclick=()=>{currentUser=usernameInput.value.trim();localStorage.setItem('searchmasUsername',currentUser);updateUserDisplay();};
+    const historyList=document.getElementById('historyList');
+    let history=JSON.parse(localStorage.getItem('searchmasHistory')||'[]');
+
+    function saveSearch(query){
+      history.unshift(query);
+      localStorage.setItem('searchmasHistory',JSON.stringify(history.slice(0,100)));
+    }
+
+    function showHistory(){
+      historyList.innerHTML='';
+      if(history.length===0){historyList.innerHTML='No history yet.';return;}
+      history.forEach(h=>{const span=document.createElement('span');span.textContent=h;historyList.appendChild(span);});
+    }
+
+    document.getElementById('profileBtn').onclick=()=>{home.style.display='none';results.style.display='none';historyView.style.display='block';showHistory();};
+    document.getElementById('closeHistory').onclick=()=>{historyView.style.display='none';home.style.display='block';};
+
     document.getElementById('go').onclick=()=>enterResults();
     document.getElementById('goTop').onclick=()=>refreshActive();
     document.getElementById('back').onclick=()=>{results.style.display='none';home.style.display='block';};
     q.addEventListener('keydown',e=>{if(e.key==='Enter'){enterResults();}});
     qTop.addEventListener('keydown',e=>{if(e.key==='Enter'){refreshActive();}});
+
     function getQuery(){return (qTop.value.trim()||q.value.trim());}
     function setActive(id){['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss','tabHistory'].forEach(t=>document.getElementById(t).classList.remove('active'));document.getElementById(id).classList.add('active');}
     function activeTab(){return ['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss','tabHistory'].find(t=>document.getElementById(t).classList.contains('active'))||'tabWeb';}
-    function saveSearch(q){if(!currentUser)return;const key=currentUser+'_history';const hist=JSON.parse(localStorage.getItem(key)||'[]');hist.unshift(q);localStorage.setItem(key,JSON.stringify(hist.slice(0,200)));}
-    function enterResults(){const query=getQuery();if(!query)return;saveSearch(query);home.style.display='none';results.style.display='block';qTop.value=query;showWeb();}
-    function refreshActive(){const id=activeTab();if(id==='tabWeb')showWeb();else if(id==='tabImages')showImages();else if(id==='tabVideos')showVideos();else if(id==='tabNews')showNews();else if(id==='tabDiscuss')showDiscuss();else showHistory();}
+
+    function enterResults(){const query=getQuery();if(!query)return;saveSearch(query);home.style.display='none';historyView.style.display='none';results.style.display='block';qTop.value=query;showWeb();}
+    function refreshActive(){const id=activeTab();if(id==='tabWeb')showWeb();else if(id==='tabImages')showImages();else if(id==='tabVideos')showVideos();else if(id==='tabNews')showNews();else if(id==='tabDiscuss')showDiscuss();else showHistoryTab();}
+
     function favicon(url){try{return 'https://www.google.com/s2/favicons?domain='+new URL(url).hostname;}catch{return 'https://www.google.com/favicon.ico';}}
     function item(label,url){return `<div class="item"><img src="${favicon(url)}"><a href="${url}" target="_blank">${label}</a></div>`;}
+
     function showWeb(){const q=getQuery();if(!q)return;setActive('tabWeb');content.innerHTML=item('Google: '+q,'https://www.google.com/search?q='+encodeURIComponent(q))+item('Wikipedia: '+q,'https://en.wikipedia.org/wiki/Special:Search?search='+encodeURIComponent(q))+`<div class="item"><img src="https://chat.openai.com/favicon.ico"><a href="https://chat.openai.com/?q=${encodeURIComponent(q)}" target="_blank">ChatGPT: ${q}</a></div>`+`<div class="item"><img src="https://www.gstatic.com/lamda/images/gemini_symbol.png"><a href="https://gemini.google.com/app/search?q=${encodeURIComponent(q)}" target="_blank">Gemini: ${q}</a></div>`;}
-    async function showImages(){const q=getQuery();if(!q)return;setActive('tabImages');try{const res=await fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(q)}&per_page=12&client_id=b6Om1yQejxS88kA2na-UYEct9zypZTOmAYlzJMbeEe0`);const data=await res.json();let grid='<div class="photo-grid">';data.results.forEach(img=>{grid+=`<img src="${img.urls.small}" alt="${q}">`;});grid+='</div>';content.innerHTML=grid;}catch(err){content.innerHTML='<p>Could not load images.</p>';}}
-    function showVideos(){const q=getQuery();if(!q)return;setActive('tabVideos');content.innerHTML=item('YouTube: '+q,'https://www.youtube.com/results?search_query='+encodeURIComponent(q))+item('Vimeo: '+q,'https://vimeo.com/search?q='+encodeURIComponent(q));}
-    function showNews(){const q=getQuery();if(!q)return;setActive('tabNews');content.innerHTML=`<
+
+    async function showImages(){const q=getQuery();if(!q)return;setActive('tabImages');try{const res=await fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(q)}&per_page=12&client_id=b6Om1yQejxS88kA2na-UYEct9zypZTOmAYlzJMbeEe0`);const data=await res
