--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     .split { display:flex; min-height:100vh; }
     .half { flex:1; background:url('https://cdn.fcglcdn.com/brainbees/images/products/583x720/19208325a.webp') center/cover no-repeat; }
     .card { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); width:min(900px,92vw); padding:20px; background:rgba(0,0,0,0.65); border-radius:16px; }
-    h1 { margin:0; text-align:center; font-size:2em; }
+    h1 { margin:0 0 16px; text-align:center; font-size:2em; }
     .bar { display:flex; gap:10px; margin-bottom:12px; }
     .bar input { flex:1; padding:12px; border-radius:8px; border:1px solid #444; background:#1b1b1b; color:#fff; }
     .bar button { padding:12px; border-radius:8px; border:none; background:#ff5ca8; color:#fff; cursor:pointer; }
@@ -18,7 +18,7 @@
     .tabs button.active { background:#ff5ca8; }
     #content { margin-top:16px; }
     .item { margin-bottom:12px; display:flex; align-items:center; gap:10px; }
-    .item img { width:32px; height:32px; }
+    .item img { width:24px; height:24px; }
     .item a { color:#fff; text-decoration:none; font-weight:bold; }
     .item a:hover { text-decoration:underline; }
     .photo-grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(150px,1fr)); gap:10px; }
@@ -39,7 +39,7 @@
       </div>
       <div id="results" style="display:none;">
         <div class="bar">
-          <input id="qTop" type="text">
+          <input id="qTop" type="text" placeholder="Search…">
           <button id="goTop">Go</button>
           <button id="back">Back</button>
         </div>
@@ -61,15 +61,21 @@
     const qTop=document.getElementById('qTop');
     const content=document.getElementById('content');
 
+    const tabs=['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss'];
+
     document.getElementById('go').addEventListener('click', enterResults);
-    q.addEventListener('keydown', e=>{if(e.key==='Enter'){enterResults();}});
+    q.addEventListener('keydown', e=>{if(e.key==='Enter') enterResults();});
     document.getElementById('goTop').addEventListener('click', refreshActive);
-    qTop.addEventListener('keydown', e=>{if(e.key==='Enter'){refreshActive();}});
-    document.getElementById('back').addEventListener('click', ()=>{results.style.display='none';home.style.display='block';});
+    qTop.addEventListener('keydown', e=>{if(e.key==='Enter') refreshActive();});
+    document.getElementById('back').addEventListener('click', ()=>{results.style.display='none';home.style.display='block';qTop.value='';});
+
+    tabs.forEach(id=>{
+      document.getElementById(id).addEventListener('click', ()=>{setActive(id);refreshActive();});
+    });
 
     function getQuery(){return (qTop.value.trim()||q.value.trim());}
-    function setActive(id){['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss'].forEach(t=>document.getElementById(t).classList.remove('active'));document.getElementById(id).classList.add('active');}
-    function activeTab(){return ['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss'].find(t=>document.getElementById(t).classList.contains('active'))||'tabWeb';}
+    function setActive(id){tabs.forEach(t=>document.getElementById(t).classList.remove('active'));document.getElementById(id).classList.add('active');}
+    function activeTab(){return tabs.find(t=>document.getElementById(t).classList.contains('active'))||'tabWeb';}
 
     function enterResults(){
       const query=getQuery();
@@ -82,66 +88,66 @@
 
     function refreshActive(){
       const id=activeTab();
-      if(id==='tabWeb')showWeb();
-      else if(id==='tabImages')showImages();
-      else if(id==='tabVideos')showVideos();
-      else if(id==='tabNews')showNews();
-      else if(id==='tabDiscuss')showDiscuss();
+      if(id==='tabWeb') showWeb();
+      else if(id==='tabImages') showImages();
+      else if(id==='tabVideos') showVideos();
+      else if(id==='tabNews') showNews();
+      else if(id==='tabDiscuss') showDiscuss();
     }
 
     function favicon(url){try{return 'https://www.google.com/s2/favicons?domain='+new URL(url).hostname;}catch{return 'https://www.google.com/favicon.ico';}}
-    function item(label,url){return `<div class="item"><img src="${favicon(url)}"><a href="${url}" target="_blank">${label}</a></div>`;}
+    function item(label,url,iconUrl){const icon=iconUrl||favicon(url);return `<div class="item"><img src="${icon}" alt=""><a href="${url}" target="_blank">${label}</a></div>`;}
 
     function showWeb(){
-      const q=getQuery();
-      if(!q)return;
+      const query=getQuery();
+      if(!query) return;
       setActive('tabWeb');
       content.innerHTML=
-        item('Google: '+q,'https://www.google.com/search?q='+encodeURIComponent(q))+
-        `<div class="item"><img src="https://chat.openai.com/favicon.ico"><a href="https://chat.openai.com/?q=${encodeURIComponent(q)}" target="_blank">ChatGPT: ${q}</a></div>`+
-        `<div class="item"><img src="https://gemini.google.com/favicon.ico"><a href="https://gemini.google.com/app/search?q=${encodeURIComponent(q)}" target="_blank">Gemini: ${q}</a></div>`;
+        `<div class="item"><img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png" alt="Google"><a href="https://www.google.com/search?q=${encodeURIComponent(query)}" target="_blank">Google: ${query}</a></div>`+
+        `<div class="item"><img src="https://chat.openai.com/favicon.ico" alt="ChatGPT"><a href="https://chat.openai.com/?q=${encodeURIComponent(query)}" target="_blank">ChatGPT: ${query}</a></div>`+
+        `<div class="item"><img src="https://www.gstatic.com/ai/gemini/v1/favicon.ico" alt="Gemini"><a href="https://gemini.google.com/app/search?q=${encodeURIComponent(query)}" target="_blank">Gemini: ${query}</a></div>`;
     }
 
     async function showImages(){
-      const q=getQuery();
-      if(!q)return;
+      const query=getQuery();
+      if(!query) return;
       setActive('tabImages');
       try{
-        const res=await fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(q)}&per_page=12&client_id=b6Om1yQejxS88kA2na-UYEct9zypZTOmAYlzJMbeEe0`);
+        const res=await fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(query)}&per_page=12&client_id=b6Om1yQejxS88kA2na-UYEct9zypZTOmAYlzJMbeEe0`);
         const data=await res.json();
-        let grid='<div class="photo-grid">';
-        data.results.forEach(img=>{grid+=`<img src="${img.urls.small}" alt="${q}">`;});
-        grid+='</div>';
-        content.innerHTML=grid;
-      }catch(err){content.innerHTML='<p>Could not load images.</p>';}
+        let html='<div class="photo-grid">';
+        (data.results||[]).forEach(img=>{html+=`<a href="${img.links.html}" target="_blank"><img src="${img.urls.small}" alt="${query}"></a>`;});
+        html+='</div>';
+        content.innerHTML=html||'<p>No images found.</p>';
+      }catch{content.innerHTML='<p>Could not load images.</p>';}
     }
 
     function showVideos(){
-      const q=getQuery();
-      if(!q)return;
+      const query=getQuery();
+      if(!query) return;
       setActive('tabVideos');
       content.innerHTML=
-        item('YouTube: '+q,'https://www.youtube.com/results?search_query='+encodeURIComponent(q))+
-        item('Vimeo: '+q,'https://vimeo.com/search?q='+encodeURIComponent(q));
+        item('YouTube: '+query,'https://www.youtube.com/results?search_query='+encodeURIComponent(query))+
+        item('Vimeo: '+query,'https://vimeo.com/search?q='+encodeURIComponent(query));
     }
 
     function showNews(){
-      const q=getQuery();
-      if(!q)return;
+      const query=getQuery();
+      if(!query) return;
       setActive('tabNews');
       content.innerHTML=
-        `<div class="item"><img src="https://www.gstatic.com/images/branding/product/2x/news_96dp.png"><a href="https://news.google.com/search?q=${encodeURIComponent(q)}" target="_blank">Google News: ${q}</a></div>`+
-        item('Reuters: '+q,'https://www.reuters.com/search/news?blob='+encodeURIComponent(q));
+        item('Google News: '+query,'https://news.google.com/search?q='+encodeURIComponent(query),'https://www.gstatic.com/images/branding/product/2x/news_96dp.png')+
+        item('Reuters: '+query,'https://www.reuters.com/search/news?blob='+encodeURIComponent(query));
     }
 
     function showDiscuss(){
-      const q=getQuery();
-      if(!q)return;
+      const query=getQuery();
+      if(!query) return;
       setActive('tabDiscuss');
       content.innerHTML=
-        item('Reddit: '+q,'https://www.reddit.com/search/?q='+encodeURIComponent(q))+
-        item('Quora: '+q,'https://www.quora.com/search?q='+encodeURIComponent(q))+
-        item('Stack Overflow: '+q,'https://stackoverflow.com/search?q='+encodeURIComponent(q));
+        item('Reddit: '+query,'https://www.reddit.com/search/?q='+encodeURIComponent(query))+
+        item('Quora: '+query,'https://www.quora.com/search?q='+encodeURIComponent(query))+
+        item('Stack Overflow: '+query,'https://stackoverflow.com/search?q='+encodeURIComponent(query));
     }
   </script>
 </body>
