--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body { margin:0; font-family:sans-serif; color:#fff; }
-    .split { display:flex; min-height:100vh; }
-    .half { flex:1; background:url('https://cdn.fcglcdn.com/brainbees/images/products/583x720/19208325a.webp') center/cover no-repeat; }
     .card { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); width:min(900px,92vw); padding:20px; background:rgba(0,0,0,0.65); border-radius:16px; }
     h1 { margin:0 0 16px; text-align:center; font-size:2em; }
     .bar { display:flex; gap:10px; margin-bottom:12px; }
@@ -26,32 +24,28 @@
   </style>
 </head>
 <body>
-  <div class="split">
-    <div class="half"></div>
-    <div class="half"></div>
-    <div class="card">
-      <div id="home">
-        <h1>Searchmas 🎅🎄</h1>
-        <div class="bar">
-          <input id="q" type="text" placeholder="Search…">
-          <button id="go">Search</button>
-        </div>
+  <div class="card">
+    <div id="home">
+      <h1>Searchmas 🎅🎄</h1>
+      <div class="bar">
+        <input id="q" type="text" placeholder="Search…">
+        <button id="go">Search</button>
       </div>
-      <div id="results" style="display:none;">
-        <div class="bar">
-          <input id="qTop" type="text" placeholder="Search…">
-          <button id="goTop">Go</button>
-          <button id="back">Back</button>
-        </div>
-        <div class="tabs">
-          <button id="tabWeb" class="active">Web</button>
-          <button id="tabImages">Images</button>
-          <button id="tabVideos">Videos</button>
-          <button id="tabNews">News</button>
-          <button id="tabDiscuss">Discuss</button>
-        </div>
-        <div id="content"></div>
+    </div>
+    <div id="results" style="display:none;">
+      <div class="bar">
+        <input id="qTop" type="text" placeholder="Search…">
+        <button id="goTop">Go</button>
+        <button id="back">Back</button>
       </div>
+      <div class="tabs">
+        <button id="tabWeb" class="active">Web</button>
+        <button id="tabImages">Images</button>
+        <button id="tabVideos">Videos</button>
+        <button id="tabNews">News</button>
+        <button id="tabDiscuss">Discuss</button>
+      </div>
+      <div id="content"></div>
     </div>
   </div>
   <script>
@@ -149,4 +143,8 @@
       setActive('tabDiscuss');
       content.innerHTML=
         item('Reddit: '+query,'https://www.reddit.com/search/?q='+encodeURIComponent(query))+
-        item('Quora: '+query,'https://www.quora.com
+        item('Quora: '+query,'https://www.quora.com/search?q='+encodeURIComponent(query));
+    }
+  </script>
+</body>
+</html>
