--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
   <title>Searchmas 🎅🎄</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body { margin:0; font-family:sans-serif; color:#fff; }
-    .card { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); width:min(900px,92vw); padding:20px; background:rgba(0,0,0,0.65); border-radius:16px; }
+    body { margin:0; font-family:sans-serif; color:#fff; background:#111; }
+    .card { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%);
+      width:min(900px,92vw); padding:20px; background:rgba(0,0,0,0.65); border-radius:16px; }
     h1 { margin:0 0 16px; text-align:center; font-size:2em; }
     .bar { display:flex; gap:10px; margin-bottom:12px; }
-    .bar input { flex:1; padding:12px; border-radius:8px; border:1px solid #444; background:#1b1b1b; color:#fff; }
-    .bar button { padding:12px; border-radius:8px; border:none; background:#ff5ca8; color:#fff; cursor:pointer; }
+    .bar input { flex:1; padding:12px; border-radius:8px; border:1px solid #444;
+      background:#1b1b1b; color:#fff; }
+    .bar button { padding:12px; border-radius:8px; border:none; background:#ff5ca8;
+      color:#fff; cursor:pointer; }
     .tabs { display:flex; gap:8px; flex-wrap:wrap; margin:12px 0; }
-    .tabs button { padding:8px 12px; border-radius:6px; background:#333; color:#fff; border:none; cursor:pointer; }
+    .tabs button { padding:8px 12px; border-radius:6px; background:#333; color:#fff;
+      border:none; cursor:pointer; }
     .tabs button.active { background:#ff5ca8; }
     #content { margin-top:16px; }
     .item { margin-bottom:12px; display:flex; align-items:center; gap:10px; }
@@ -67,7 +71,8 @@
     });
 
     function getQuery(){return (qTop.value.trim()||q.value.trim());}
-    function setActive(id){tabs.forEach(t=>document.getElementById(t).classList.remove('active'));document.getElementById(id).classList.add('active');}
+    function setActive(id){tabs.forEach(t=>document.getElementById(t).classList.remove('active'));
+      document.getElementById(id).classList.add('active');}
     function activeTab(){return tabs.find(t=>document.getElementById(t).classList.contains('active'))||'tabWeb';}
 
     function enterResults(){
