--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
   <title>Searchmas 🎅🎄</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body { margin:0; font-family:sans-serif; color:#fff;
+    body {
+      margin:0; font-family:sans-serif; color:#fff;
       background:url('https://cdn.fcglcdn.com/brainbees/images/products/583x720/19208325a.webp') center/cover no-repeat;
-      display:flex; align-items:center; justify-content:center; height:100vh; }
-    .card { width:min(600px,90%); padding:20px; background:rgba(0,0,0,0.65); border-radius:16px;
-            display:flex; flex-direction:column; align-items:center; justify-content:center; }
+      display:flex; align-items:center; justify-content:center; height:100vh;
+    }
+    .card {
+      width:min(600px,90%); padding:20px;
+      background:rgba(0,0,0,0.65); border-radius:16px;
+      display:flex; flex-direction:column; align-items:center; justify-content:center;
+    }
     h1 { margin:0 0 16px; text-align:center; font-size:2em; }
     .bar { display:flex; gap:10px; margin-bottom:12px; width:100%; justify-content:center; }
     .bar input { flex:1; padding:12px; border-radius:8px; border:1px solid #444;
@@ -17,8 +22,7 @@
     .bar button { padding:12px; border-radius:8px; border:none; background:#ff5ca8;
       color:#fff; cursor:pointer; }
     .tabs { display:flex; gap:8px; flex-wrap:wrap; margin:12px 0; justify-content:center; }
-    .tabs button { padding:8px 12px; border-radius:6px; background:#333; color:#fff;
-      border:none; cursor:pointer; }
+    .tabs button { padding:8px 12px; border-radius:6px; background:#333; color:#fff; border:none; cursor:pointer; }
     .tabs button.active { background:#ff5ca8; }
     #content { margin-top:16px; width:100%; }
     .item { margin-bottom:12px; display:flex; align-items:center; gap:10px; }
@@ -151,8 +155,3 @@
       content.innerHTML=
         item('Reddit: '+query,'https://www.reddit.com/search/?q='+encodeURIComponent(query))+
         item('Quora: '+query,'https://www.quora.com/search?q='+encodeURIComponent(query));
-    }
-  </script>
-</body>
-</html>
-
