--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     }
     .bg-half {
       width:50%; height:100%;
-      background:url('https://cdn.fcglcdn.com/brainbees/images/products/583x720/19208325a.webp') center/contain no-repeat;
+      background:url('https://cdn.fcglcdn.com/brainbees/images/products/583x720/19208325a.webp') center center no-repeat;
+      background-size:contain;   /* ensures the whole Santa fits */
+      background-color:#000;     /* fill behind if aspect ratio leaves gaps */
     }
     .card {
       position:fixed; top:50%; left:50%; transform:translate(-50%,-50%);
