--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     html,body {
       height:100%; margin:0; font-family:sans-serif; color:#fff;
     }
+    /* Split background into two equal halves */
     .bg-split {
       position:fixed; inset:0; display:flex;
     }
     .bg-half {
       width:50%; height:100%;
-      background:url('https://cdn.fcglcdn.com/brainbees/images/products/583x720/19208325a.webp') center center no-repeat;
-      background-size:contain;   /* ensures the whole Santa fits */
-      background-color:#000;     /* fill behind if aspect ratio leaves gaps */
+      background:url('https://cdn.fcglcdn.com/brainbees/images/products/583x720/19208325a.webp') center/cover no-repeat;
     }
     .card {
       position:fixed; top:50%; left:50%; transform:translate(-50%,-50%);
@@ -42,10 +41,13 @@
   </style>
 </head>
 <body>
+  <!-- Two equal halves with Santa image -->
   <div class="bg-split">
     <div class="bg-half"></div>
     <div class="bg-half"></div>
   </div>
+
+  <!-- Centered black card -->
   <div class="card">
     <div id="home">
       <h1>Searchmas 🎅🎄</h1>
