--- a/index.html
+++ b/index.html
@@ -5,49 +5,34 @@
   <title>Searchmas 🎅🎄</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    html,body {
-      height:100%; margin:0; font-family:sans-serif; color:#fff;
-    }
-    /* Split screen into two equal halves */
-    .bg-split {
-      position:fixed; inset:0; display:flex;
-    }
-    .bg-half {
-      flex:1; /* each half takes 50% */
-      background:url('https://cdn.fcglcdn.com/brainbees/images/products/583x720/19208325a.webp') center/cover no-repeat;
-    }
-    .card {
-      position:fixed; top:50%; left:50%; transform:translate(-50%,-50%);
-      width:min(600px,90%); padding:20px;
-      background:rgba(0,0,0,0.75); border-radius:16px;
-      display:flex; flex-direction:column; align-items:center; justify-content:center;
-    }
-    h1 { margin:0 0 16px; text-align:center; font-size:2em; }
-    .bar { display:flex; gap:10px; margin-bottom:12px; width:100%; justify-content:center; }
-    .bar input { flex:1; padding:12px; border-radius:8px; border:1px solid #444;
-      background:#1b1b1b; color:#fff; max-width:400px; }
-    .bar button { padding:12px; border-radius:8px; border:none; background:#ff5ca8;
-      color:#fff; cursor:pointer; }
-    .tabs { display:flex; gap:8px; flex-wrap:wrap; margin:12px 0; justify-content:center; }
-    .tabs button { padding:8px 12px; border-radius:6px; background:#333; color:#fff; border:none; cursor:pointer; }
-    .tabs button.active { background:#ff5ca8; }
-    #content { margin-top:16px; width:100%; }
-    .item { margin-bottom:12px; display:flex; align-items:center; gap:10px; }
-    .item img { width:24px; height:24px; object-fit:contain; }
-    .item a { color:#fff; text-decoration:none; font-weight:bold; }
-    .item a:hover { text-decoration:underline; }
-    .photo-grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(150px,1fr)); gap:10px; }
-    .photo-grid img { width:100%; height:120px; object-fit:cover; border-radius:8px; background:#222; }
+    html,body {height:100%;margin:0;font-family:sans-serif;color:#fff;}
+    .bg-split {position:fixed;inset:0;display:flex;}
+    .bg-half {flex:1;background:url('https://cdn.fcglcdn.com/brainbees/images/products/583x720/19208325a.webp') center/cover no-repeat;}
+    .card {position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
+      width:min(600px,90%);padding:20px;background:rgba(0,0,0,0.75);border-radius:16px;
+      display:flex;flex-direction:column;align-items:center;justify-content:center;}
+    h1 {margin:0 0 16px;text-align:center;font-size:2em;}
+    .bar {display:flex;gap:10px;margin-bottom:12px;width:100%;justify-content:center;}
+    .bar input {flex:1;padding:12px;border-radius:8px;border:1px solid #444;
+      background:#1b1b1b;color:#fff;max-width:400px;}
+    .bar button {padding:12px;border-radius:8px;border:none;background:#ff5ca8;color:#fff;cursor:pointer;}
+    .tabs {display:flex;gap:8px;flex-wrap:wrap;margin:12px 0;justify-content:center;}
+    .tabs button {padding:8px 12px;border-radius:6px;background:#333;color:#fff;border:none;cursor:pointer;}
+    .tabs button.active {background:#ff5ca8;}
+    #content {margin-top:16px;width:100%;}
+    .item {margin-bottom:12px;display:flex;align-items:center;gap:10px;}
+    .item img {width:24px;height:24px;object-fit:contain;}
+    .item a {color:#fff;text-decoration:none;font-weight:bold;}
+    .item a:hover {text-decoration:underline;}
+    .photo-grid {display:grid;grid-template-columns:repeat(auto-fill,minmax(150px,1fr));gap:10px;}
+    .photo-grid img {width:100%;height:120px;object-fit:cover;border-radius:8px;background:#222;}
   </style>
 </head>
 <body>
-  <!-- Two equal halves with Santa image -->
   <div class="bg-split">
     <div class="bg-half"></div>
     <div class="bg-half"></div>
   </div>
-
-  <!-- Centered black card -->
   <div class="card">
     <div id="home">
       <h1>Searchmas 🎅🎄</h1>
@@ -72,5 +57,103 @@
       <div id="content"></div>
     </div>
   </div>
+  <script>
+    const home=document.getElementById('home');
+    const results=document.getElementById('results');
+    const q=document.getElementById('q');
+    const qTop=document.getElementById('qTop');
+    const content=document.getElementById('content');
+    const tabs=['tabWeb','tabImages','tabVideos','tabNews','tabDiscuss'];
+
+    document.getElementById('go').addEventListener('click', enterResults);
+    q.addEventListener('keydown', e=>{if(e.key==='Enter') enterResults();});
+    document.getElementById('goTop').addEventListener('click', refreshActive);
+    qTop.addEventListener('keydown', e=>{if(e.key==='Enter') refreshActive();});
+    document.getElementById('back').addEventListener('click', ()=>{results.style.display='none';home.style.display='block';qTop.value='';});
+
+    tabs.forEach(id=>{
+      document.getElementById(id).addEventListener('click', ()=>{setActive(id);refreshActive();});
+    });
+
+    function getQuery(){return (qTop.value.trim()||q.value.trim());}
+    function setActive(id){tabs.forEach(t=>document.getElementById(t).classList.remove('active'));document.getElementById(id).classList.add('active');}
+    function activeTab(){return tabs.find(t=>document.getElementById(t).classList.contains('active'))||'tabWeb';}
+
+    function enterResults(){
+      const query=getQuery();
+      if(!query){alert("Type something to search");return;}
+      home.style.display='none';
+      results.style.display='block';
+      qTop.value=query;
+      showWeb();
+    }
+
+    function refreshActive(){
+      const id=activeTab();
+      if(id==='tabWeb') showWeb();
+      else if(id==='tabImages') showImages();
+      else if(id==='tabVideos') showVideos();
+      else if(id==='tabNews') showNews();
+      else if(id==='tabDiscuss') showDiscuss();
+    }
+
+    function item(label,url,iconUrl){
+      const icon=iconUrl||('https://www.google.com/s2/favicons?domain='+new URL(url).hostname);
+      return `<div class="item"><img src="${icon}" alt=""><a href="${url}" target="_blank">${label}</a></div>`;
+    }
+
+    function showWeb(){
+      const query=getQuery();
+      if(!query) return;
+      setActive('tabWeb');
+      content.innerHTML=
+        item('Google: '+query,'https://www.google.com/search?q='+encodeURIComponent(query))+
+        item('ChatGPT: '+query,'https://chat.openai.com/?q='+encodeURIComponent(query))+
+        item('Gemini: '+query,'https://gemini.google.com/app/search?q='+encodeURIComponent(query));
+    }
+
+    async function showImages(){
+      const query=getQuery();
+      if(!query) return;
+      setActive('tabImages');
+      try{
+        const res=await fetch(`https://api.unsplash.com/search/photos?query=${encodeURIComponent(query)}&per_page=12&client_id=b6Om1yQejxS88kA2na-UYEct9zypZTOmAYlzJMbeEe0`);
+        const data=await res.json();
+        let html='<div class="photo-grid">';
+        (data.results||[]).forEach(img=>{
+          html+=`<a href="${img.links.html}" target="_blank"><img src="${img.urls.small}" alt="${query}"></a>`;
+        });
+        html+='</div>';
+        content.innerHTML=html||'<p>No images found.</p>';
+      }catch{content.innerHTML='<p>Could not load images.</p>';}
+    }
+
+    function showVideos(){
+      const query=getQuery();
+      if(!query) return;
+      setActive('tabVideos');
+      content.innerHTML=
+        item('YouTube: '+query,'https://www.youtube.com/results?search_query='+encodeURIComponent(query))+
+        item('Bing Videos: '+query,'https://www.bing.com/videos/search?q='+encodeURIComponent(query));
+    }
+
+    function showNews(){
+      const query=getQuery();
+      if(!query) return;
+      setActive('tabNews');
+      content.innerHTML=
+        item('Google News: '+query,'https://news.google.com/search?q='+encodeURIComponent(query))+
+        item('Bing News: '+query,'https://www.bing.com/news/search?q='+encodeURIComponent(query));
+    }
+
+    function showDiscuss(){
+      const query=getQuery();
+      if(!query) return;
+      setActive('tabDiscuss');
+      content.innerHTML=
+        item('Reddit: '+query,'https://www.reddit.com/search/?q='+encodeURIComponent(query))+
+        item('Quora: '+query,'https://www.quora.com/search?q='+encodeURIComponent(query));
+    }
+  </script>
 </body>
 </html>
